fixed button spacing

--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -131,7 +131,7 @@
     cursor: pointer;
     position: absolute;
     bottom: 20px;
-    right: 290px;
+    right: 420px;
     font-size: 18px;
     width: 25%;
 }
